--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.vars.outputs.tag }}
-        release_name: ${{ steps.vars.outputs.tag }}
+        tag_name: ${{ github.ref_name }}
+        release_name: ${{ github.ref_name }}
         draft: true
         prerelease: false
 
@@ -33,8 +33,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build/kicad-eurorack-library-${{ steps.vars.outputs.tag }}.zip
-        asset_name: kicad-eurorack-library-${{ steps.vars.outputs.tag }}.zip
+        asset_path: ./build/kicad-eurorack-library-${{ github.ref_name }}.zip
+        asset_name: kicad-eurorack-library-${{ github.ref_name }}.zip
         asset_content_type: application/zip
 
     - uses: actions/upload-release-asset@v1.0.1
@@ -42,8 +42,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build/kicad-eurorack-tools-${{ steps.vars.outputs.tag }}.zip
-        asset_name: kicad-eurorack-tools-${{ steps.vars.outputs.tag }}.zip
+        asset_path: ./build/kicad-eurorack-tools-${{ github.ref_name }}.zip
+        asset_name: kicad-eurorack-tools-${{ github.ref_name }}.zip
         asset_content_type: application/zip
 
     - uses: actions/upload-release-asset@v1.0.1
@@ -51,8 +51,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./build/kicad-eurorack-simluation-${{ steps.vars.outputs.tag }}.lib
-        asset_name: kicad-eurorack-simluation-${{ steps.vars.outputs.tag }}.lib
+        asset_path: ./build/kicad-eurorack-simluation-${{ github.ref_name }}.lib
+        asset_name: kicad-eurorack-simluation-${{ github.ref_name }}.lib
         asset_content_type: application/text
 
     - uses: eregon/publish-release@v1
