--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,10 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    
-    - run: |
-        bash build.sh
+    - name: Build KiCad zip files
+      - uses: actions/checkout@v3
+      - run: |
+          bash build.sh
     
     - name: Create Draft Release
       id: create_release
