--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,10 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-    - name: Build KiCad zip files
+    - name: Checkout repository
       uses: actions/checkout@v3
+
+    - name: Build KiCad zip files
       run: |
         bash build.sh
     
